packages/flutter/lib/flutter_breez_liquid_bindings_generated.dart


  void ffi_breez_sdk_liquid_bindings_rust_future_free_i64(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_free_i64(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_i64Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_free_i64');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_i64 =
      _ffi_breez_sdk_liquid_bindings_rust_future_free_i64Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int ffi_breez_sdk_liquid_bindings_rust_future_complete_i64(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_complete_i64(
      handle,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_i64Ptr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_complete_i64');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_i64 =
      _ffi_breez_sdk_liquid_bindings_rust_future_complete_i64Ptr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_poll_f32(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Void> uniffi_callback,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_poll_f32(
      handle,
      uniffi_callback,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_f32Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_poll_f32');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_f32 =
      _ffi_breez_sdk_liquid_bindings_rust_future_poll_f32Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_cancel_f32(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_cancel_f32(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_f32Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_cancel_f32');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_f32 =
      _ffi_breez_sdk_liquid_bindings_rust_future_cancel_f32Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_free_f32(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_free_f32(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_f32Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_free_f32');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_f32 =
      _ffi_breez_sdk_liquid_bindings_rust_future_free_f32Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  double ffi_breez_sdk_liquid_bindings_rust_future_complete_f32(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_complete_f32(
      handle,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_f32Ptr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_complete_f32');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_f32 =
      _ffi_breez_sdk_liquid_bindings_rust_future_complete_f32Ptr
          .asFunction<double Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_poll_f64(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Void> uniffi_callback,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_poll_f64(
      handle,
      uniffi_callback,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_f64Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_poll_f64');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_f64 =
      _ffi_breez_sdk_liquid_bindings_rust_future_poll_f64Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_cancel_f64(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_cancel_f64(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_f64Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_cancel_f64');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_f64 =
      _ffi_breez_sdk_liquid_bindings_rust_future_cancel_f64Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_free_f64(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_free_f64(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_f64Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_free_f64');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_f64 =
      _ffi_breez_sdk_liquid_bindings_rust_future_free_f64Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  double ffi_breez_sdk_liquid_bindings_rust_future_complete_f64(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_complete_f64(
      handle,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_f64Ptr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_complete_f64');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_f64 =
      _ffi_breez_sdk_liquid_bindings_rust_future_complete_f64Ptr
          .asFunction<double Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_poll_pointer(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Void> uniffi_callback,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_poll_pointer(
      handle,
      uniffi_callback,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_pointerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_poll_pointer');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_pointer =
      _ffi_breez_sdk_liquid_bindings_rust_future_poll_pointerPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_cancel_pointer(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_cancel_pointer(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_pointerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_cancel_pointer');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_pointer =
      _ffi_breez_sdk_liquid_bindings_rust_future_cancel_pointerPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_free_pointer(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_free_pointer(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_pointerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_free_pointer');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_pointer =
      _ffi_breez_sdk_liquid_bindings_rust_future_free_pointerPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> ffi_breez_sdk_liquid_bindings_rust_future_complete_pointer(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_complete_pointer(
      handle,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_pointerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<RustCallStatus>)>>('ffi_breez_sdk_liquid_bindings_rust_future_complete_pointer');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_pointer =
      _ffi_breez_sdk_liquid_bindings_rust_future_complete_pointerPtr
          .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_poll_rust_buffer(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Void> uniffi_callback,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_poll_rust_buffer(
      handle,
      uniffi_callback,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_rust_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_poll_rust_buffer');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_rust_buffer =
      _ffi_breez_sdk_liquid_bindings_rust_future_poll_rust_bufferPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_cancel_rust_buffer(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_cancel_rust_buffer(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_rust_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_cancel_rust_buffer');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_rust_buffer =
      _ffi_breez_sdk_liquid_bindings_rust_future_cancel_rust_bufferPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_free_rust_buffer(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_free_rust_buffer(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_rust_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_free_rust_buffer');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_rust_buffer =
      _ffi_breez_sdk_liquid_bindings_rust_future_free_rust_bufferPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  RustBuffer ffi_breez_sdk_liquid_bindings_rust_future_complete_rust_buffer(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_complete_rust_buffer(
      handle,
      out_status,
    );
  }
